@@ -40,7 +40,8 @@ Fixes
     was thrown when finding D-H pairs via the topology if `hydrogens` was an
     empty AtomGroup (Issue #2848)
   * Fixed the DMSParser, allowing the creation of multiple segids sharing
-    residues with identical resids (Issue #1387, PR #2872)    
+    residues with identical resids (Issue #1387, PR #2872)
+  * H5MD files are now pickleable with H5PYPicklable (Issue #2890, PR #2894)
 
 Enhancements
   * Refactored analysis.helanal into analysis.helix_analysis
